New Features
============

This page summarizes the main new features introduced in each Yii release.

Version 1.1.14
--------------

 * Added [CPasswordHelper]
 * Added [CRedisCache]

Version 1.1.11
--------------
 * [Added http caching support](/doc/guide/caching.page#http-caching)
 * [Added console application exit codes](/doc/guide/topics.console#exit-codes)
 * [Added model validation rules blacklisting](/doc/guide/form.model#declaring-validation-rules)
 * [Added git and hg support](/doc/guide/quickstart.first-app#creating-your-first-yii-application)
 
Version 1.1.8
-------------
 * [Added support for using custom URL rule classes](/doc/guide/topics.url#using-custom-url-rule-classes)

Version 1.1.7
-------------
 * [Added RESTful URL support](/doc/guide/topics.url#user-friendly-urls)
 * [Added query caching support](/doc/guide/caching.data#query-caching)
 * [Now it's possible to pass parameters for relational named scopes](/doc/guide/database.arr#relational-query-with-named-scopes)
 * [Added ability to perform Relational query without getting related models](/doc/guide/database.arr#performing-relational-query-without-getting-related-models)
 * [Added support for HAS_MANY through and HAS_ONE through AR relations](/doc/guide/database.arr#relational-query-with-through)
 * [Added transaction support for the DB migration feature](/doc/guide/database.migration#transactional-migrations)
 * [Added support for using parameter binding with class-based actions](/doc/guide/basics.controller#action-parameter-binding)
 * Added support for performing seamless client-side data validation using [CActiveForm]

 Version 1.1.6
-------------
 * [Added query builder](/doc/guide/database.query-builder)
 * [Added database migration](/doc/guide/database.migration)
 * [Best MVC Practices](/doc/guide/basics.best-practices)
 * [Added support for using anonymous parameters and global options in console commands](/doc/guide/topics.console)

Version 1.1.5
-------------
